# quant-skillkit

./: .gitignore  README.md  pyproject.toml
deploy/: DEPLOY-HERMES.md  export-hermes-manifest.ps1  hermes-config.template.json  hermes-tool-manifest.generated.json  start-quant-skillkit.ps1
docs/: book-to-skillkit.md  hermes-integration.md
examples/: hermes_tool_manifest.json  run_demo.py  sample_prices.csv
quant_skillkit/: __init__.py  backtest.py  cli.py  data.py  factors.py  hermes_adapter.py  indicators.py  options.py  portfolio.py  risk.py  server.py  strategies.py
tests/: test_backtest.py  test_hermes.py  test_indicators.py
