[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-skillkit"
version = "0.1.0"
description = "Quant trading skill toolkit distilled from practical book concepts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.0",
]

[project.scripts]
quant-skillkit = "quant_skillkit.cli:main"

[tool.setuptools]
packages = ["quant_skillkit"]
